# ThinkWith

./: README.md
thinkwith/: package-lock.json  package.json  tsconfig.json
thinkwith_server/: .gitignore  Cargo.toml  docker-compose.yml
thinkwith_server/migrations/: 20250617205810_create_users_table.sql
thinkwith_server/src/: main.rs
