[package]
name = "thinkwith"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
dotenv = "0.15.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
